# webparts-librepcb

./: .gitignore  IDEAS.md  README.md  app.py  cli.py  constants.py  footprint_review_page.py  library_manager.py  main.py  main_ui.py  pyproject.toml  requirements.txt  search.py  search_page.py  search_page.ui  settings.ui  svg_add_pad_labels.py  svg_utils.py  ui.py
adapters/: search_engine.py
converters/: footprint_converter.py
models/: __init__.py  alignment.py  common_info.py  elements.py  footprint.py  graphics.py  layer.py  library_part.py  pin_mapping.py  search_result.py  status.py  symbol.py
tests/: test_hero_image_widget.py  test_library_page.py  test_polygon_alignment.py  test_search_engine_cache.py  test_search_page.py  test_text_selection.py  test_ui_functionality.py  test_ui_syntax.py  test_ui_syntax_simple.py  test_workbench_hero_image.py  test_workbench_loader.py
ui/: assembly_page.py  assembly_page.ui  component_review_page.py  component_review_page.ui  custom_widgets.py  finalize_page.py  finalize_page.ui  footprint_review_page.py  footprint_review_page.ui  hero_image_widget.py  hero_image_widget.ui  library_element_image_widget.py  library_element_sidebar.py  page_library.py  page_library.ui  page_library_element.py  page_library_element.ui  page_search.py  page_search.ui  part_info_widget.py  part_info_widget.ui  symbol_review_page.py  symbol_review_page.ui  ui_workers.py  workbench.py  workbench.ui  zoom_pan_image_text_widget.py
workers/: component_converter.py  device_converter.py  element_renderer.py  footprint_converter.py  (+4 more)
(+10 files in other folders)
