[project]
name = "webparts-librepcb"
version = "0.1.0"
description = "Online parts converter for LibrePCB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg~=2.8.2",
    "first~=2.0.2",
    "pydantic~=2.0",
    "pyside6~=6.9.1",
    "requests~=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-qt>=4.4.0",
]

[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "ui: marks tests as UI tests",
]
